mesh/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: vm-servicemesh
spec:
  selector:
    backend: server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
